; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/svp/extr_svp.c_svp_write_dram.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/svp/extr_svp.c_svp_write_dram.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i64 }
%struct.TYPE_3__ = type { i32 }

@svp = common dso_local global %struct.TYPE_4__* null, align 8
@SSP_WAIT_30FE06 = common dso_local global i32 0, align 4
@SSP_WAIT_30FE08 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @svp_write_dram(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @svp, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, 131070
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %8, %11
  %13 = inttoptr i64 %12 to i32*
  store i32 %5, i32* %13, align 4
  %14 = load i32, i32* %3, align 4
  %15 = icmp eq i32 %14, 3210758
  br i1 %15, label %16, label %27

16:                                               ; preds = %2
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %16
  %20 = load i32, i32* @SSP_WAIT_30FE06, align 4
  %21 = xor i32 %20, -1
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @svp, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = and i32 %25, %21
  store i32 %26, i32* %24, align 8
  br label %27

27:                                               ; preds = %19, %16, %2
  %28 = load i32, i32* %3, align 4
  %29 = icmp eq i32 %28, 3210760
  br i1 %29, label %30, label %41

30:                                               ; preds = %27
  %31 = load i32, i32* %4, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %41

33:                                               ; preds = %30
  %34 = load i32, i32* @SSP_WAIT_30FE08, align 4
  %35 = xor i32 %34, -1
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** @svp, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = and i32 %39, %35
  store i32 %40, i32* %38, align 8
  br label %41

41:                                               ; preds = %33, %30, %27
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
